--- a/dashboard/assets/AssetManifest.json
+++ b/dashboard/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/loginbg.jpg":["assets/loginbg.jpg"],"assets/logo.png":["assets/logo.png"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/logo.png":["assets/logo.png"]}
