--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-pdf": "^2.2.0",
     "http": "0.0.1-security",
     "mongoose": "^5.10.13",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "pm2": "^4.5.0"
   }
 }
