--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "titleBar.activeForeground": "#FAFAFE",
-        "activityBarBadge.foreground": "#f8f8f8",
-        "activityBar.inactiveForeground": "#4BF7CB"
-    },
+    "git.ignoreLimitWarning": true
 }
