--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http": "0.0.1-security",
     "mongoose": "^5.10.13",
     "nodemon": "^2.0.6",
-    "pm2": "^4.5.0"
+    "pm2": "^4.5.0",
+    "twilio": "^3.62.0"
   }
 }
